iCMS: Intermittent hang with gc/gctests/CallGC/CallGC01 and +ExplicitGCInvokesConcurrent

XMLWordPrintable

    • gc
    • b05
    • generic
    • generic
    • Verified

        The nightly test:

        gc/gctests/CallGC/CallGC01

        is failing intermittently by hanging and timing out.

        Links to the failure are:

        http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-09-22/GC_Baseline-Xinc/vm/linux-i586/client/mixed/linux-i586_vm_client_mixed_vm.gc.testlist/analysis.html

        and:

        http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-09-22/GC_Baseline-Xinc/vm/linux-i586/client/mixed/linux-i586_vm_client_mixed_vm.gc.testlist/ResultDir/CallGC01/

        Machine: tq-win2k-dev
        VM Arch: linux-i586 (Client VM).

        The test seems to be hanging in one run out of 3 - so it's fairly reproducible.

        The flags used to run the test include +ExplicitGCInvokesConcurrent. With this flag, calls to System.gc() perform a young collection and initiate a concurrent cycle. The thread that is making the call to System.gc() waits until the concurrent cycle completes. Looking at the stack traces of the various threads it looks like the issue might be associated with this flag.

        I'm attaching the rerun.sh script just in case the links above end up being archived.

              Assignee:
              Y. Ramakrishna
              Reporter:
              John Cuthbertson
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: